<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/devicesInactives"
            android:title="@string/devicesInactives"
            android:icon="@drawable/ic_devices_black_24dp"/>
        <item
            android:id="@+id/reports"
            android:title="@string/reports"
            android:icon="@drawable/ic_equalizer_black_24dp"/>
        <item
            android:id="@+id/options"
            android:title="@string/options"
            android:icon="@drawable/ic_menu_manage"/>
        <item
            android:id="@+id/us"
            android:title="@string/us"
            android:icon="@drawable/ic_info_black_24dp"/>
    </group>
</menu>
