<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@id/options"
    tools:context=".Options">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/options_tollbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="236dp"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/options"
                android:textColor="@color/cardview_light_background"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="50dp"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/enable_notifications"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="96dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="70dp"
                android:paddingStart="50dp"
                android:paddingTop="12dp"
                android:text="@string/evaluate_app"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="161dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:contentDescription="@string/options_image"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                tools:layout_editor_absoluteX="304dp"
                tools:layout_editor_absoluteY="161dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="56dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"
                    android:paddingStart="50dp"
                    android:text="@string/report_error"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="229dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"
                    android:paddingStart="50dp"
                    android:text="@string/report_error2"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="229dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:contentDescription="@string/options_image"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                tools:layout_editor_absoluteX="304dp"
                tools:layout_editor_absoluteY="229dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp">

            <TextView
                android:id="@+id/textView00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:paddingTop="12dp"
                android:text="@string/app_version"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="161dp"
                tools:textColor="@color/cardview_dark_background" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>